k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webacidizator
  namespace: webacidizator
  labels:
    app: webacidizator
spec:
  type: ClusterIP
  selector:
    app: webacidizator
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
